--- a/exercicios_webpack/public/index.html
+++ b/exercicios_webpack/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset"utf-8"> 
-        <title>Exercicoso com Webpack</title>
-
+        <meta charset="UTF-8">
+        <title>Exercícios webpack</title>
     </head>
     <body>
+        <!--foi configurado para ser gerado na pasta publica (bundle.js)-->
         <script src="bundle.js"></script>
     </body>
 </html>
