--- a/exercicios_webpack/public/index.html
+++ b/exercicios_webpack/public/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Exercícios webpack</title>
+        <link href='app.css' rel='stylesheet' />
     </head>
     <body>
         <!--foi configurado para ser gerado na pasta publica (bundle.js)-->
